<resources>
    <string name="app_name">Unit Converter</string>
    <string name="ibtnSpeedDesc">Speedometer</string>
    <string name="ibtnTimeDesc">Wall Clock</string>
    <string name="ibtnCurrencyDesc">Euro bills and credit card</string>
    <string name="ibtnDistanceDesc">Meter</string>
    <string name="SpeedConverterTitle">Speed converter</string>
    <string name="CurrencyConverterTitle">Currency converter</string>
    <string name="DistanceConverterTitle">Distance converter</string>
    <string name="TimeConverterTitle">Time Converter</string>
    <string name="ConverterInputDesc">Convert from</string>
    <string name="ConverterOutputDesc">To</string>
    <string name="ResultTitle">Result</string>
    <string name="inputHint">Enter Value</string>
    <string name="convert">CONVERT</string>
    <string name="tvResult">RESULTS</string>
    <string-array name="SpeedUnits">
        
        <item>km/h</item>
        <item>mph</item>
        <item>m/s</item>
        <item>mi/s</item>
        <item>knots</item>
        <item>yd/s</item>
        <item>c</item>
        
    </string-array>
    
    <string-array name="DistanceUnits">
        
        <item>km</item>
        <item>mi</item>
        <item>cm</item>
        <item>mm</item>
        <item>dm</item>
        <item>ft</item>
        <item>yd</item>
        <item>in</item>
        <item>light years</item>
        
    </string-array>
    
    <string-array name="TimeUnits">
        <item>years</item>
        <item>days</item>
        <item>weeks</item>
        <item>hours</item>
        <item>minutes</item>
        <item>seconds</item>
        <item>milliseconds</item>
        <item>microseconds</item>
        <item>nanoseconds</item>
        <item>picoseconds</item>

    </string-array>

    <string-array name="CurrencyUnits">

        <item>Euro</item>
        <item>American Dollar</item>
        <item>Swiss Franc</item>
        <item>Australian Dollar</item>
        <item>Canadian Dollar</item>
        <item>Croatian Kuna</item>
        <item>Serbian Dinar</item>
        <item>Bosnian Mark</item>

    </string-array>
</resources>
