<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDistanceTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DistanceConverterTitle"
            android:layout_alignParentTop="true"
            android:textAllCaps="true"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/colorTitle"
            android:padding="10dp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/tvDistanceInputDesc"
            style="@style/tvDescStyle"
            android:layout_below="@id/tvDistanceTitle"
            android:text="@string/ConverterInputDesc" />

        <LinearLayout
            android:id="@+id/llDistanceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tvDistanceInputDesc">

            <EditText
                android:id="@+id/etInputedDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="viewEnd"
                android:hint="@string/inputHint"/>

            <Spinner
                android:id="@+id/spnDistanceInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDistanceOutputDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llDistanceInput"
            android:text="@string/ConverterOutputDesc"
            android:padding="10dp"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/spnDistanceOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDistanceOutputDesc"
            android:padding="10dp"/>

        <Button
            android:id="@+id/btnConvertDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spnDistanceOutput"
            android:text="@string/convert"
            />

    </RelativeLayout>

</ScrollView>
