<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSpeedTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SpeedConverterTitle"
            android:layout_alignParentTop="true"
            android:textAllCaps="true"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/colorTitle"
            android:padding="10dp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/tvSpeedInputDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSpeedTitle"
            android:text="@string/ConverterInputDesc"
            android:padding="10dp"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/spnSpeedInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSpeedInputDesc"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/tvSpeedOutputDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spnSpeedInput"
            android:text="@string/ConverterOutputDesc"
            android:padding="10dp"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/spnSpeedOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSpeedOutputDesc"
            android:padding="10dp"/>

    </RelativeLayout>

</ScrollView>
